update: fix home overflow

--- a/src/app/shared/home/home.component.scss
+++ b/src/app/shared/home/home.component.scss
@@ -20,10 +20,16 @@
 .sidebar {
   .mat-card {
     float:right;
-    position: relative;
+    //position: relative;
     clear: both;
     width: 19.25rem;
     margin-bottom: 20px;
     margin-left: 20px;
+  }
+  .filler {
+    float:right;
+    clear: both;
+    width: 19.25rem;
+    height: calc(100vh - 400px);
   }
 }
